{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 120,
  "lineage": "f6fb3d2b-5bfd-95a3-ff68-fd5154d00921",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https_with_ssl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:561866774576:listener/app/rails-poc-alb/320cdc863b1219de/555eea77bbaf34cb",
            "certificate_arn": "arn:aws:acm:us-east-1:561866774576:certificate/fddc3992-9840-4967-87fc-5d29c7723e87",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:561866774576:targetgroup/rails-poc-tg/b29dfc515bb3671b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:561866774576:listener/app/rails-poc-alb/320cdc863b1219de/555eea77bbaf34cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:561866774576:loadbalancer/app/rails-poc-alb/320cdc863b1219de",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.rails-poc-aws-alb",
            "module.alb.aws_lb_target_group.rails-poc-target-group",
            "module.securitygroups.aws_security_group.rails-poc-alb-sg",
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_eip.rails-eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.rails-nat-gateway",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_route_table_association.private_subnet_assoc",
            "module.vpc.aws_route_table_association.public_subnet_assoc",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "rails-poc-aws-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:561866774576:loadbalancer/app/rails-poc-alb/320cdc863b1219de",
            "arn_suffix": "app/rails-poc-alb/320cdc863b1219de",
            "desync_mitigation_mode": "defensive",
            "dns_name": "rails-poc-alb-2044471682.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:561866774576:loadbalancer/app/rails-poc-alb/320cdc863b1219de",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rails-poc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a90529ede9d6211a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a65572111ff42a44"
              },
              {
                "subnet_id": "subnet-0a90881244d5e6c62"
              }
            ],
            "subnets": [
              "subnet-0a65572111ff42a44",
              "subnet-0a90881244d5e6c62"
            ],
            "tags": {
              "Name": "rails-poc-alb"
            },
            "tags_all": {
              "Name": "rails-poc-alb"
            },
            "vpc_id": "vpc-0434205017f1adba1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.securitygroups.aws_security_group.rails-poc-alb-sg",
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_eip.rails-eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.rails-nat-gateway",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_route_table_association.private_subnet_assoc",
            "module.vpc.aws_route_table_association.public_subnet_assoc",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rails-poc-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:561866774576:listener/app/rails-poc-alb/320cdc863b1219de/cf9a1800e0661d90",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:561866774576:listener/app/rails-poc-alb/320cdc863b1219de/cf9a1800e0661d90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:561866774576:loadbalancer/app/rails-poc-alb/320cdc863b1219de",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.rails-poc-aws-alb",
            "module.securitygroups.aws_security_group.rails-poc-alb-sg",
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_eip.rails-eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.rails-nat-gateway",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_route_table_association.private_subnet_assoc",
            "module.vpc.aws_route_table_association.public_subnet_assoc",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rails-poc-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:561866774576:targetgroup/rails-poc-tg/b29dfc515bb3671b",
            "arn_suffix": "targetgroup/rails-poc-tg/b29dfc515bb3671b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:561866774576:targetgroup/rails-poc-tg/b29dfc515bb3671b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "rails-poc-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_eip.rails-eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.rails-nat-gateway",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_route_table_association.private_subnet_assoc",
            "module.vpc.aws_route_table_association.public_subnet_assoc",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rails-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:security-group/sg-00e6b82e0768f6bcc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e6b82e0768f6bcc",
            "ingress": [
              {
                "cidr_blocks": [
                  "175.101.3.226/32",
                  "182.71.17.50/32",
                  "103.248.208.34/32"
                ],
                "description": "allow ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rails-poc-ec2-sg",
            "name_prefix": "",
            "owner_id": "561866774576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rails-asg-sg"
            },
            "tags_all": {
              "Name": "rails-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rails-poc-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:security-group/sg-0a90529ede9d6211a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a90529ede9d6211a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rails-poc-alb-sg",
            "name_prefix": "",
            "owner_id": "561866774576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rails-alb-sg"
            },
            "tags_all": {
              "Name": "rails-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rails-pri-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:security-group/sg-0a1d7c27f79750739",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1d7c27f79750739",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow http traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a90529ede9d6211a"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "allow ssh traffic from jumphost",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e6b82e0768f6bcc"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rails-pri-ec2-sg",
            "name_prefix": "",
            "owner_id": "561866774576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rails-pri-ec2-sg"
            },
            "tags_all": {
              "Name": "rails-pri-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroups.aws_security_group.rails-ec2-sg",
            "module.securitygroups.aws_security_group.rails-poc-alb-sg",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rails-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:security-group/sg-00b971c908b033d5a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b971c908b033d5a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow ssh traffic",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e6b82e0768f6bcc"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rails-poc-rds-sg",
            "name_prefix": "",
            "owner_id": "561866774576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rails-rds-sg"
            },
            "tags_all": {
              "Name": "rails-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroups.aws_security_group.rails-ec2-sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:route-table/rtb-09c3ff37c3a2d61f8",
            "default_route_table_id": "rtb-09c3ff37c3a2d61f8",
            "id": "rtb-09c3ff37c3a2d61f8",
            "owner_id": "561866774576",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0adfa673232d82692",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rails-private-route-table"
            },
            "tags_all": {
              "Name": "rails-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.rails-eip",
            "module.vpc.aws_nat_gateway.rails-nat-gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "rails-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d0d59bf5c854903",
            "association_id": "eipassoc-023cae0f47c47d3cb",
            "domain": "vpc",
            "id": "eipalloc-02d0d59bf5c854903",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b24e5b7033a8dde6",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-3-212-43-225.compute-1.amazonaws.com",
            "public_ip": "3.212.43.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rails-eip"
            },
            "tags_all": {
              "Name": "rails-eip"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:internet-gateway/igw-0727241e01e666c74",
            "id": "igw-0727241e01e666c74",
            "owner_id": "561866774576",
            "tags": {
              "Name": "rails-igw"
            },
            "tags_all": {
              "Name": "rails-igw"
            },
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "rails-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d0d59bf5c854903",
            "connectivity_type": "public",
            "id": "nat-0adfa673232d82692",
            "network_interface_id": "eni-0b24e5b7033a8dde6",
            "private_ip": "10.0.1.194",
            "public_ip": "3.212.43.225",
            "subnet_id": "subnet-0a90881244d5e6c62",
            "tags": {
              "Name": "rails-NAT-gateway"
            },
            "tags_all": {
              "Name": "rails-NAT-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.rails-eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:route-table/rtb-0e817cd53a373ac6f",
            "id": "rtb-0e817cd53a373ac6f",
            "owner_id": "561866774576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0727241e01e666c74",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rails-public-route-table"
            },
            "tags_all": {
              "Name": "rails-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053b1f73566798b69",
            "route_table_id": "rtb-09c3ff37c3a2d61f8",
            "subnet_id": "subnet-0e33bc3977a74ddc3"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_eip.rails-eip",
            "module.vpc.aws_nat_gateway.rails-nat-gateway",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02051fd1e041a52b7",
            "route_table_id": "rtb-09c3ff37c3a2d61f8",
            "subnet_id": "subnet-0cd8f4e7d9c630bb4"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.private_route",
            "module.vpc.aws_eip.rails-eip",
            "module.vpc.aws_nat_gateway.rails-nat-gateway",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4a3e6f9355c4564",
            "route_table_id": "rtb-0e817cd53a373ac6f",
            "subnet_id": "subnet-0a90881244d5e6c62"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4f05a90be17f87e",
            "route_table_id": "rtb-0e817cd53a373ac6f",
            "subnet_id": "subnet-0a65572111ff42a44"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:subnet/subnet-0e33bc3977a74ddc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e33bc3977a74ddc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561866774576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rails-private-subnet.1"
            },
            "tags_all": {
              "Name": "rails-private-subnet.1"
            },
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:subnet/subnet-0cd8f4e7d9c630bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd8f4e7d9c630bb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561866774576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rails-private-subnet.2"
            },
            "tags_all": {
              "Name": "rails-private-subnet.2"
            },
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:subnet/subnet-0a90881244d5e6c62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a90881244d5e6c62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561866774576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rails-public-subnet.1"
            },
            "tags_all": {
              "Name": "rails-public-subnet.1"
            },
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:subnet/subnet-0a65572111ff42a44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a65572111ff42a44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561866774576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rails-public-subnet.2"
            },
            "tags_all": {
              "Name": "rails-public-subnet.2"
            },
            "vpc_id": "vpc-0434205017f1adba1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561866774576:vpc/vpc-0434205017f1adba1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08eb8dabf9cd2d90f",
            "default_route_table_id": "rtb-09c3ff37c3a2d61f8",
            "default_security_group_id": "sg-080cb9b681d19ea0f",
            "dhcp_options_id": "dopt-073aae4b1bac4599c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0434205017f1adba1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c3ff37c3a2d61f8",
            "owner_id": "561866774576",
            "tags": {
              "Name": "rails-vpc"
            },
            "tags_all": {
              "Name": "rails-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}